<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>net.butfly</groupId>
		<artifactId>parent</artifactId>
		<version>3.1.0-SNAPSHOT</version>
	</parent>
	<groupId>net.butfly.albatis</groupId>
	<artifactId>albatis</artifactId>
	<version>1.6.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<maven.compiler.source>8</maven.compiler.source>
		<maven.compiler.target>8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<version.albacore>3.1.0-SNAPSHOT</version.albacore>
		<version.albatis>${project.version}</version.albatis>
		<!-- versions of dependencies -->
		<version.kafka>0.9.0.1</version.kafka>
		<!-- <version.kafka>0.8.2.2</version.kafka> -->
		<!-- <version.kafka>0.10.2.2</version.kafka> -->
		<!-- <version.kafka>0.11.0.3</version.kafka> --><!-- for scala_2.11 only -->
		<version.mongodb.thin>2.14.3</version.mongodb.thin>
		<version.mongodb.fat>3.9.1</version.mongodb.fat>
		<version.mongo.spark>2.3.0</version.mongo.spark>
		<version.kudu.spark>1.8.0</version.kudu.spark>
		<!-- <version.elastic>6.5.3</version.elastic> -->
		<!-- <version.elastic>6.5.4</version.elastic> -->
		<version.elastic>6.6.2</version.elastic>
		<version.kudu>1.11.1</version.kudu>
		<!-- <version.hbase>2.1.1</version.hbase> -->
		<!-- <version.hbase>1.2.0-cdh${version.cdh}</version.hbase> -->
		<version.hbase>2.1.0-cdh${version.cdh}</version.hbase>
		<version.hive>1.2.2</version.hive><!-- 2.3.6,3.1.2,1.2.2 -->
		<version.hadoop>3.0.0-cdh${version.cdh}</version.hadoop>
		<version.zookeeper>3.5.6</version.zookeeper>
		<!-- <version.hadoop>3.1.1</version.hadoop> -->
		<!-- <version.hadoop>2.6.0-cdh${version.cdh}</version.hadoop> -->
		<version.solr>7.6.0</version.solr>
		<version.redis>5.0.3</version.redis>
		<version.cassandra>3.7.1</version.cassandra>
		<!-- <version.cassandra>4.2.0</version.cassandra> -->
		<version.redis.lettuce>5.1.3.RELEASE</version.redis.lettuce>
		<version.arangodb>5.0.3</version.arangodb>
		<version.neo4j>1.7.2</version.neo4j>
		<version.cdh>6.2.0</version.cdh>
	</properties>
	<modules>
		<module>core</module>
		<!-- IO projects, now at 1.5.2 -->
		<module>jdbc-io</module>
		<module>mongodb-io</module>
		<module>solr-io</module>
		<module>es-io</module>
		<module>hbase-io</module>
		<module>parquet-io</module>
		<module>kudu-io</module>
		<module>kafka2-io</module>
		<module>kafka-io</module>
		<module>arangodb-io</module>
		<module>redis-io</module>
		<module>file-io</module>
        <module>odps-io</module>
        <module>es7-io</module>
		<module>hmpp-io</module>
		<module>activemq-io</module>
        <!-- <module>neo4j-io</module> -->
		<!-- ORM projects, now stay at 1.5.0 -->
	</modules>
	<dependencies>
		<dependency>
			<groupId>net.butfly.albacore</groupId>
			<artifactId>albacore-test</artifactId>
			<version>${version.albacore}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.11</version>
			</dependency>
			<dependency>
				<groupId>org.scala-lang</groupId>
				<artifactId>scala-library</artifactId>
				<version>${version.scala}</version>
			</dependency>
			<dependency>
				<groupId>org.scala-lang</groupId>
				<artifactId>scala-reflect</artifactId>
				<version>${version.scala}</version>
			</dependency>
			<dependency>
				<artifactId>hbase-protocol</artifactId>
				<groupId>org.apache.hbase</groupId>
				<version>${version.hbase}</version>
			</dependency>
			<dependency>
				<artifactId>hbase-common</artifactId>
				<groupId>org.apache.hbase</groupId>
				<version>${version.hbase}</version>
			</dependency>
			<dependency>
				<artifactId>hbase-client</artifactId>
				<groupId>org.apache.hbase</groupId>
				<version>${version.hbase}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.hadoop</groupId>
				<artifactId>hadoop-common</artifactId>
				<version>${version.hadoop}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.hadoop</groupId>
				<artifactId>hadoop-hdfs</artifactId>
				<version>${version.hadoop}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.hadoop</groupId>
				<artifactId>hadoop-annotations</artifactId>
				<version>${version.hadoop}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.hadoop</groupId>
				<artifactId>hadoop-auth</artifactId>
				<version>${version.hadoop}</version>
			</dependency>
			<!-- downgrade hadoop -->
			<dependency>
				<groupId>commons-cli</groupId>
				<artifactId>commons-cli</artifactId>
				<version>1.3.1</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<repositories>
		<repository>
			<id>cdh</id>
			<name>cdh repository</name>
			<url>http://repository.cloudera.com/content/repositories/releases/</url>
		</repository>
	</repositories>
	<scm>
		<connection>https://bitbucket.org/butfly/albatis.git</connection>
		<developerConnection>https://butfly@bitbucket.org/butfly/albatis.git</developerConnection>
		<url>https://bitbucket.org/butfly/albatis</url>
	</scm>
</project>
